--- a/netlify.toml
+++ b/netlify.toml
@@ -20,15 +20,16 @@
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
     
-    # Content Security Policy
+    # Content Security Policy - Updated for Calendly Integration
     Content-Security-Policy = """
       default-src 'self';
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://fonts.googleapis.com;
-      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com https://fonts.googleapis.com https://assets.calendly.com;
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://assets.calendly.com;
       font-src 'self' https://fonts.gstatic.com;
-      img-src 'self' data: https:;
-      connect-src 'self' https://www.google-analytics.com;
-      frame-src 'self' https://www.googletagmanager.com;
+      img-src 'self' data: https: https://assets.calendly.com;
+      connect-src 'self' https://www.google-analytics.com https://api.calendly.com;
+      frame-src 'self' https://www.googletagmanager.com https://calendly.com;
+      child-src 'self' https://calendly.com;
     """
     
     # Performance headers
