--- a/netlify.toml
+++ b/netlify.toml
@@ -31,31 +31,28 @@
       frame-src 'self' https://www.googletagmanager.com https://calendly.com;
       child-src 'self' https://calendly.com;
     """
-    
-    # Performance headers
-    Cache-Control = "public, max-age=31536000"
 
-# Cache static assets
+# Cache static assets with shorter cache times to ensure updates are seen
 [[headers]]
-  for = "/images/*"
+  for = "/assets/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+    Cache-Control = "public, max-age=3600"
 
 [[headers]]
   for = "/*.css"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+    Cache-Control = "public, max-age=3600"
 
 [[headers]]
   for = "/*.js"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+    Cache-Control = "public, max-age=3600"
 
 # HTML files should not be cached as aggressively
 [[headers]]
   for = "/*.html"
   [headers.values]
-    Cache-Control = "public, max-age=3600"
+    Cache-Control = "public, max-age=300"
 
 # Redirects for clean URLs and SEO
 [[redirects]]
@@ -82,6 +79,21 @@
 [[redirects]]
   from = "/services/"
   to = "/services.html"
+  status = 200
+
+[[redirects]]
+  from = "/blog/"
+  to = "/blog.html"
+  status = 200
+
+[[redirects]]
+  from = "/testimonials/"
+  to = "/testimonials.html"
+  status = 200
+
+[[redirects]]
+  from = "/faq/"
+  to = "/faq.html"
   status = 200
 
 # 404 fallback
